[package]
name = "pool-sync-mantle"
version = "1.1.0"
edition = "2021"
authors = ["Whisker17"]
description = "A comprehensive library for synchronizing DeFi pools (UniswapV3, Agni, MerchantMoe) on Mantle blockchain with intelligent caching and rate limiting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Whisker17/PoolSync_Mantle"
homepage = "https://github.com/Whisker17/PoolSync_Mantle"
readme = "README.md"
keywords = ["defi", "amm", "pool", "mantle", "uniswap"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pool_sync_mantle"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"


[dependencies]
anyhow = "1.0.82"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"
serde = {version = "1.0.203", features = ["derive"]}
async-trait = "0.1.80"
alloy = { version = "0.6.4", features = ["full", "node-bindings", "sol-types"] }
indicatif = "0.17.8"
futures = "0.3.30"
thiserror = "1.0.61"
serde_json = "1.0.118"
once_cell = "1.19.0"
reqwest = "0.12.5"
hex = "0.4.3"
dashmap = "6.0.1"
ratelimit = "0.9.1"
rand = "0.8.5"
env_logger = "0.11.4"
log = "0.4.22"
backoff = { version = "0.4.0", features = ["futures"] }
uniswap_v3_math = "0.5.2"




